# rag-chunk-audit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/rag_chunk_audit/: __init__.py  core.py
tests/: test_core.py
