[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-chunk-audit"
version = "0.1.0"
description = "Find common quality and safety issues in RAG chunks before indexing."
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
authors = [
    { name = "Eduardo J. Barrios", email = "edujbarrios@outlook.com" },
]
keywords = ["rag", "chunks", "vector-database", "llm", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/edujbarrios/rag-chunk-audit"
Issues = "https://github.com/edujbarrios/rag-chunk-audit/issues"
